# pik

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  config.md  default_config.toml  example_config.toml  long_args.sh  pik.spec
.github/: release.yml
.github/workflows/: on_merge.yml  on_release.yml  release.yml
docs/: search_by_arg.tape  search_by_name.tape  search_by_path.tape  search_by_port.tape  search_everywhere.tape
scripts/: update_homebrew_formula.sh  update_scoop_manifest.sh
snap/: snapcraft.yaml
src/: args.rs  config.rs  lib.rs  main.rs  processes.rs  settings.rs  tui.rs
src/config/: keymappings.rs  ui.rs
src/processes/: container.rs  daemon.rs  filters.rs  ports.rs  query.rs  users.rs  utils.rs
src/tui/: color_cycle.rs  components.rs  fx.rs  highlight.rs  rendering.rs
src/tui/components/: debug.rs  fps_counter.rs  general_input_handler.rs  help_footer.rs  help_popup.rs  notifications.rs  process_details.rs  process_table.rs  processes_view.rs  search_bar.rs
src/tui/highlight/: regions.rs  spliterator.rs
tests/: config_merge.rs  processes_search.rs
