[package]
name = "pik"
version = "0.10.0"
edition = "2021"
authors = ["Jacek Kurlit"]
keywords = ["terminal", "process", "linux", "system", "kill"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
description = "pik - process interactive kill"
repository = "https://github.com/jacek-kurlit/pik"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
tui-textarea = "0.7"
anyhow = "1.0.79"
sysinfo = "0.32"
listeners = "0.2.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
fuzzy-matcher = "0.3.7"

[dev-dependencies]
http-test-server = "2.1.1"
