[package]
name = "pik"
version = "0.27.0"
edition = "2024"
authors = ["Jacek Kurlit"]
keywords = ["terminal", "process", "linux", "system", "kill"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
description = "pik - process interactive kill"
repository = "https://github.com/jacek-kurlit/pik"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.30", features = ["serde"] }
# Using fork because crate is no longer maintained
tui-textarea = { git = "https://github.com/jacek-kurlit/tui-textarea.git", features = [
  "ratatui",
  "crossterm",
] }
anyhow = "1.0.79"
sysinfo = "0.37"
listeners = "0.3.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "1.1"
fuzzy-matcher = "0.3.7"
itertools = "0.14"
regex = "1.11"
unicode-width = "0.2"
arboard = { version = "3.6", features = ["wayland-data-control"] }

[dev-dependencies]
http-test-server = "2.1.1"
faux = "0.1"
